services/uptime-kuma/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: status-page-rewrite
  namespace: uptime-kuma
spec:
  replacePathRegex:
    regex: ^/$
    replacement: /status
