services/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  clusterIP: 10.43.60.1
  clusterIPs:
  - 10.43.60.1
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: uptime-kuma
  sessionAffinity: None
  type: ClusterIP
