services/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: authelia-add-https@kubernetescrd,authelia-authelia-forwardauth@kubernetescrd
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  ingressClassName: traefik
  rules:
  - host: status.homelab.local
    http:
      paths:
      - backend:
          service:
            name: uptime-kuma
            port:
              number: 3001
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - status.homelab.local
